<resources>
    <string name="app_name" translatable="false">A2Goat</string>
    <string name="app_full_name" translatable="false">America2Goat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_app_info">App</string>
    <string name="conversion_output" translatable="false">0</string>
    <string name="unit">unit</string>
    <string name="kilometer_abbreviation" translatable="false">km</string>
    <string name="meter_abbreviation" translatable="false">m</string>
    <string name="centimeter_abbreviation" translatable="false">cm</string>
    <string name="mile_abbreviation" translatable="false">mi</string>
    <string name="yard_abbreviation" translatable="false">yd</string>
    <string name="foot_abbreviation" translatable="false">ft</string>
    <string name="inch_abbreviation" translatable="false">in</string>
    <string name="kilogram_abbreviation" translatable="false">kg</string>
    <string name="gram_abbreviation" translatable="false">g</string>
    <string name="pound_abbreviation" translatable="false">lb</string>
    <string name="ounce_abbreviation" translatable="false">oz</string>
    <string name="cubic_meter_abbreviation" translatable="false">m³</string>
    <string name="liter_abbreviation" translatable="false">L</string>
    <string name="milliliter_abbreviation" translatable="false">mL</string>
    <string name="gallon_abbreviation" translatable="false">gal</string>
    <string name="quart_abbreviation" translatable="false">qt</string>
    <string name="pint_abbreviation" translatable="false">pt</string>
    <string name="cup_abbreviation" translatable="false">cup</string>
    <string name="fluid_ounce_abbreviation" translatable="false">fl oz</string>
    <string name="kilometer">kilometer</string>
    <string name="meter">meter</string>
    <string name="centimeter">centimeter</string>
    <string name="mile">mile</string>
    <string name="yard">yard</string>
    <string name="inch">inch</string>
    <string name="foot">foot</string>
    <string name="kilogram">kilogram</string>
    <string name="gram">gram</string>
    <string name="pound">pound</string>
    <string name="ounce">ounce</string>
    <string name="cubic_meter">cubic meter</string>
    <string name="liter">liter</string>
    <string name="milliliter">milliliter</string>
    <string name="gallon">gallon</string>
    <string name="quart">quart</string>
    <string name="pint">pint</string>
    <string name="cup">cup</string>
    <string name="fluid_ounce">fluid ounce</string>
    <string name="unit_to_unit">unit to unit</string>
    <string name="conversion_word">to</string>
    <string name="input_unit_preference">Default input unit:</string>
    <string name="output_unit_preference">Default output unit:</string>
    <string name="round_preference">Number of digits after the decimal point:</string>
    <string name="swap_units_button_content_description">Swap units</string>
    <string name="digits">Digits</string>
    <string name="no_rounding">No rounding</string>
    <string name="selected_unit_type">Selected unit type</string>
    <string name="distance_unit_name">length</string>
    <string name="mass_unit_name">mass</string>
    <string name="volume_unit_name">volume</string>
    <string name="dev_info_title">Developer :</string>
    <string name="app_info_text">America2Goat is an Android app to convert imperial to metric system</string>
    <string name="where_to_find_title" translatable="false">GitHub :</string>
    <string name="main_dev_name" translatable="false">Ferfoui</string>
    <string name="repository_text">Repository</string>
    <string name="repository_url" translatable="false">https://github.com/Ferfoui/America2Goat</string>
</resources>