<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="fr.ferfoui.america2goat.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="fr.ferfoui.america2goat.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard" />

    <fragment
            android:id="@+id/navigation_app_info"
            android:name="fr.ferfoui.america2goat.ui.appinfo.AppInfoFragment"
            android:label="@string/title_app_info"
            tools:layout="@layout/fragment_app_info" />
</navigation>